Made LoopFormVerification and Simplifier FunctionProcessors